--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
     <!-- Section Main Search System -->
     <div class="section-search py-4 d-flex justify-content-start">
       <div class="container">
-        <h5 class="px-2">Catalogue</h5>
+        <h5 class="px-2">Contact us</h5>
       </div>
     </div>
     <!-- Main content -->
