--- a/index.html
+++ b/index.html
@@ -136,7 +136,12 @@
             <h5 class="me-2">Latest News</h5>
             <i class="ph ph-caret-double-right"></i>
           </div>
-          <div class="list-group w-50">
+          
+<!--            -->
+          
+          <div class="row">
+            <div class="col-lg-6">
+          <div class="list-group ">
             <a href="#" class="list-group-item list-group-item-action">
               <div class="d-flex justify-content-between">
                 <h5 class="text-news-color">Industry news</h5>
@@ -172,6 +177,9 @@
               </p></a
             >
           </div>
+          </div>
+          </div>
+<!--            -->
         </div>
       </div>
     </div>
